<resources>
    <string name="app_name">My Application</string>
    <string name="title">Решить уравнение a*x-b=c</string>
    <string name="a">Введите A</string>
    <string name="b">Введите B</string>
    <string name="c">Введите C</string>
    <string name="calculate">Вычислить</string>
    <string name="квадратноеуравнение">Решение квадратного уравнения</string>
    <string name="меню">Меню</string>
    <string name="пусто"></string>
</resources>
