<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/квадратноеуравнение" />

    <EditText
        android:id="@+id/coefficient_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a" />

    <EditText
        android:id="@+id/coefficient_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/b" />

    <EditText
        android:id="@+id/coefficient_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c" />

    <Button
        android:id="@+id/buton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="solveEquation1"
        android:text="@string/calculate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="378dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="316dp"
            android:layout_marginLeft="316dp"
            android:onClick="Meny"
            android:text="@string/меню"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.876" />

        <TextView
            android:id="@+id/result"
            android:layout_width="214dp"
            android:layout_height="36dp"
            android:text="@string/пусто"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
